--- a/ui/src/headerComponent/Header.fxml
+++ b/ui/src/headerComponent/Header.fxml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="991.0" stylesheets="@Header.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headerComponent.HeaderController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="1000.0" stylesheets="@Header.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headerComponent.HeaderController">
   <columnConstraints>
-      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="50.0" />
-      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="50.0" />
-    <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="180.0" minWidth="180.0" prefWidth="180.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="180.0" minWidth="180.0" prefWidth="180.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="180.0" minWidth="180.0" prefWidth="180.0" />
+    <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="260.0" minWidth="260.0" prefWidth="260.0" />
   </columnConstraints>
   <rowConstraints>
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -24,12 +26,56 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label text="Predictions" GridPane.columnIndex="3" />
-      <Button id="detailsButton" fx:id="detailsButton" disable="true" mnemonicParsing="false" onAction="#detailsButtonClicked" prefHeight="30.0" prefWidth="128.0" styleClass="HeaderButtons" text="Details" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-      <Button id="newExecutionButton" fx:id="newExecutionButton" disable="true" mnemonicParsing="false" onAction="#newExecutionButtonClicked" prefHeight="30.0" prefWidth="128.0" styleClass="HeaderButtons" text="New Execution" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-      <Button id="resultsButton" fx:id="resultsButton" disable="true" mnemonicParsing="false" onAction="#resultsButtonClicked" prefHeight="30.0" prefWidth="128.0" styleClass="HeaderButtons" text="Results" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-      <Button id="LoadFileButton" fx:id="LoadFileButton" mnemonicParsing="false" onAction="#loadFileButtonClicked" prefHeight="37.0" prefWidth="124.0" text="Load File" GridPane.rowIndex="1" />
-      <TextField fx:id="textLoadedFile" editable="false" prefHeight="25.0" prefWidth="362.0" text="Loaded file path..." GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="1" />
-      <Pane fx:id="queueManagement" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="110.0" prefWidth="160.0" style="-fx-background-color: blue;" GridPane.columnIndex="6" GridPane.rowSpan="3" />
+      <Label id="predictionsTitle" text="Predictions" GridPane.columnIndex="3" />
+      <StackPane GridPane.columnIndex="2" GridPane.rowIndex="2">
+         <children>
+            <Button id="detailsButton" fx:id="detailsButton" disable="true" mnemonicParsing="false" onAction="#detailsButtonClicked" prefHeight="30.0" prefWidth="128.0" styleClass="HeaderButtons" text="Details" />
+         </children>
+      </StackPane>
+      <StackPane GridPane.columnIndex="3" GridPane.rowIndex="2">
+         <children>
+            <Button id="newExecutionButton" fx:id="newExecutionButton" disable="true" mnemonicParsing="false" onAction="#newExecutionButtonClicked" prefHeight="30.0" prefWidth="128.0" styleClass="HeaderButtons" text="New Execution" />
+         </children>
+      </StackPane>
+      <StackPane GridPane.columnIndex="4" GridPane.rowIndex="2">
+         <children>
+            <Button id="resultsButton" fx:id="resultsButton" disable="true" mnemonicParsing="false" onAction="#resultsButtonClicked" prefHeight="30.0" prefWidth="128.0" styleClass="HeaderButtons" text="Results" />
+            <Button id="detailsButton" fx:id="okButton" mnemonicParsing="false" onAction="#okButtonClicked" prefHeight="30.0" prefWidth="128.0" styleClass="HeaderButtons" text="Ok" />
+         </children>
+      </StackPane>
+      <Button id="loadFileButton" fx:id="loadFileButton" mnemonicParsing="false" onAction="#loadFileButtonClicked" prefHeight="37.0" prefWidth="124.0" text="Load File" GridPane.rowIndex="1" />
+      <TextField fx:id="textLoadedFile" editable="false" prefHeight="30.0" prefWidth="324.0" text="Loaded file path..." GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="1" />
+      <VBox fx:id="queueManagement" alignment="CENTER" prefHeight="90.0" prefWidth="100.0" GridPane.columnIndex="5" GridPane.rowSpan="3">
+         <children>
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="225.0" spacing="10.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="160.0" text="Simulation queue counter" />
+                  <Label fx:id="queueCounter" alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="70.0" text="0" />
+               </children>
+               <padding>
+                  <Insets left="15.0" right="15.0" />
+               </padding>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="225.0" spacing="10.0">
+               <children>
+                  <Label prefWidth="170.0" text="Simulation running counter" />
+                  <Label fx:id="runningCounter" alignment="CENTER_RIGHT" prefWidth="70.0" text="0" />
+               </children>
+               <padding>
+                  <Insets left="15.0" right="15.0" />
+               </padding>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="225.0" spacing="10.0">
+               <children>
+                  <Label prefWidth="170.0" text="Simulation ended counter" />
+                  <Label fx:id="endedCounter" alignment="CENTER_RIGHT" prefWidth="70.0" text="0" />
+               </children>
+               <padding>
+                  <Insets left="15.0" right="15.0" />
+               </padding>
+            </HBox>
+         </children>
+      </VBox>
+      <Label fx:id="errorLabel" prefHeight="66.0" prefWidth="410.0" text="Label" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2" />
    </children>
 </GridPane>
