--- a/ui/src/pageComponent/page.fxml
+++ b/ui/src/pageComponent/page.fxml
@@ -5,19 +5,18 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-
-<ScrollPane prefHeight="710.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pageComponent.PageController">
+<ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pageComponent.PageController">
    <content>
-      <SplitPane fx:id="splitPane" dividerPositions="0.2908" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="700.0" prefWidth="1000.0">
+      <SplitPane fx:id="splitPane" dividerPositions="0.2908" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="700.0" prefWidth="1000.0">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+          <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="1000.0">
                <children>
-                  <fx:include fx:id="header" source="../headerComponent/Header.fxml" />
+                  <fx:include fx:id="header" source="../headerComponent/Header.fxml" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="0.0" />
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+          <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0">
                <children>
-                  <Pane fx:id="paneBody" layoutX="-1.0" layoutY="-4.0" prefHeight="500.0" prefWidth="1000.0" />
+                  <Pane fx:id="paneBody" layoutX="-1.0" layoutY="-4.0" prefHeight="500.0" prefWidth="1000.0" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="-4.0" />
                </children>
             </AnchorPane>
         </items>
