--- a/ui/src/resultsComponent/executionResults/resultsTypes/histogram/Histogram.fxml
+++ b/ui/src/resultsComponent/executionResults/resultsTypes/histogram/Histogram.fxml
@@ -5,14 +5,14 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="275.0" prefWidth="475.0" stylesheets="@histogram.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="resultsComponent.executionResults.resultsTypes.histogram.HistogramController">
+<VBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="275.0" prefWidth="475.0" stylesheets="@histogram.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="resultsComponent.executionResults.resultsTypes.histogram.HistogramController">
    <children>
-      <ScrollPane prefHeight="275.0" prefWidth="475.0">
+      <ScrollPane fitToHeight="true" fitToWidth="true" minHeight="-Infinity" minWidth="-Infinity" prefHeight="255.0" prefWidth="452.0">
          <content>
-            <TableView fx:id="tableView" prefHeight="249.0" prefWidth="449.0">
+            <TableView fx:id="tableView" minHeight="-Infinity" minWidth="-Infinity" prefHeight="252.0" prefWidth="446.0">
               <columns>
-                <TableColumn fx:id="valueCol" prefWidth="224.0" text="Value" />
-                <TableColumn fx:id="amountCol" prefWidth="224.0" text="Amount" />
+                <TableColumn fx:id="valueCol" prefWidth="227.0" text="Value" />
+                <TableColumn fx:id="amountCol" prefWidth="223.0" text="Amount" />
               </columns>
             </TableView>
          </content>
