--- a/ui/src/detailsComponent/details/action/increase/Increase.fxml
+++ b/ui/src/detailsComponent/details/action/increase/Increase.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="350.0" styleClass="detailsPane" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="detailsComponent.details.action.increase.IncreaseController">
+<VBox fx:id="vBox" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="350.0" styleClass="detailsPane" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="detailsComponent.details.action.increase.IncreaseController">
    <children>
       <HBox prefHeight="70.0" prefWidth="320.0" spacing="10.0">
          <children>
