--- a/ui/src/detailsComponent/details/entity/EntitySelector.fxml
+++ b/ui/src/detailsComponent/details/entity/EntitySelector.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -11,39 +10,32 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="detailsComponent.details.entity.EntitySelectorController">
-   <content>
-      <GridPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="650.0" styleClass="detailsPane">
-        <columnConstraints>
-          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="450.0" minWidth="450.0" prefWidth="450.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" valignment="BOTTOM" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="380.0" minHeight="380.0" prefHeight="380.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+
+<GridPane fx:id="gridPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="650.0" styleClass="detailsPane" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="detailsComponent.details.entity.EntitySelectorController">
+  <columnConstraints>
+    <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="450.0" minWidth="450.0" prefWidth="450.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" valignment="BOTTOM" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="380.0" minHeight="380.0" prefHeight="380.0" vgrow="SOMETIMES" />
+  </rowConstraints>
+   <children>
+      <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="630.0" spacing="10.0" GridPane.columnSpan="2">
+         <GridPane.margin>
+            <Insets left="20.0" right="10.0" />
+         </GridPane.margin>
          <children>
-            <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="630.0" spacing="10.0" GridPane.columnSpan="2">
-               <GridPane.margin>
-                  <Insets left="20.0" right="10.0" />
-               </GridPane.margin>
-               <children>
-                  <Label styleClass="label-title" text="Name:" />
-                  <Text fx:id="nameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" wrappingWidth="283.0" />
-               </children>
-            </HBox>
-            <ComboBox fx:id="propertyCBox" onAction="#propertyCBoxChoice" prefWidth="150.0" promptText="Select Property" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets left="20.0" />
-               </GridPane.margin>
-            </ComboBox>
-            <Pane fx:id="PaneProperty" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="450.0" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="2">
-               <children>
-                  <fx:include fx:id="propertyDetails" source="propertyDetails/PropertyDetails.fxml" />
-               </children>
-            </Pane>
+            <Label styleClass="label-title" text="Name:" />
+            <Text fx:id="nameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" wrappingWidth="283.0" />
          </children>
-      </GridPane>
-   </content>
-</ScrollPane>
+      </HBox>
+      <ComboBox fx:id="propertyCBox" onAction="#propertyCBoxChoice" prefWidth="150.0" promptText="Select Property" styleClass="ComboBox" GridPane.rowIndex="1">
+         <GridPane.margin>
+            <Insets left="20.0" />
+         </GridPane.margin>
+      </ComboBox>
+      <Pane fx:id="paneProperty" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="450.0" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="2" />
+   </children>
+</GridPane>
