--- a/ui/src/detailsComponent/details/entity/propertyDetails/PropertyDetails.fxml
+++ b/ui/src/detailsComponent/details/entity/propertyDetails/PropertyDetails.fxml
@@ -22,29 +22,29 @@
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="110.0" prefWidth="440.0" spacing="10.0" GridPane.columnSpan="2">
          <children>
-            <Label styleClass="label-title" text="Name:" />
-            <Text fx:id="nameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" wrappingWidth="375.0" />
+            <Label prefHeight="17.0" prefWidth="61.0" styleClass="label-title" text="Name:" />
+            <Text fx:id="nameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" wrappingWidth="341.0" />
          </children>
          <GridPane.margin>
-            <Insets right="10.0" />
+            <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </HBox>
       <HBox alignment="CENTER_LEFT" prefHeight="110.0" prefWidth="440.0" spacing="10.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
          <children>
-            <Label styleClass="label-title" text="Type:" />
-            <Text fx:id="typeVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" wrappingWidth="386.0" />
+            <Label prefHeight="17.0" prefWidth="52.0" styleClass="label-title" text="Type:" />
+            <Text fx:id="typeVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" wrappingWidth="358.0" />
          </children>
          <GridPane.margin>
-            <Insets right="10.0" />
+            <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </HBox>
       <HBox alignment="CENTER_LEFT" prefHeight="110.0" prefWidth="440.0" spacing="10.0" GridPane.columnSpan="2" GridPane.rowIndex="2">
          <children>
-            <Label styleClass="label-title" text="Range:" />
-            <Text fx:id="rangeVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" wrappingWidth="371.0" />
+            <Label prefHeight="17.0" prefWidth="58.0" styleClass="label-title" text="Range:" />
+            <Text fx:id="rangeVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" wrappingWidth="346.0" />
          </children>
          <GridPane.margin>
-            <Insets right="10.0" />
+            <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </HBox>
       <HBox alignment="CENTER_LEFT" spacing="10.0" GridPane.columnSpan="2" GridPane.rowIndex="3">
@@ -53,7 +53,7 @@
             <Text fx:id="randomInitializedVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" wrappingWidth="244.0" />
          </children>
          <GridPane.margin>
-            <Insets right="10.0" />
+            <Insets left="10.0" right="10.0" />
          </GridPane.margin>
       </HBox>
    </children>
