--- a/ui/src/headerComponent/Header.fxml
+++ b/ui/src/headerComponent/Header.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -12,7 +12,6 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="headerComponent.HeaderController">
   <columnConstraints>
@@ -29,11 +28,6 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <ColorPicker fx:id="skinButton" onAction="#skinButtonClicked" prefHeight="25.0" prefWidth="100.0">
-         <value>
-            <Color red="0.9411764740943909" green="0.9411764740943909" blue="0.9411764740943909" />
-         </value>
-      </ColorPicker>
       <Label id="predictionsTitle" text="Predictions" GridPane.columnIndex="3" />
       <StackPane GridPane.columnIndex="2" GridPane.rowIndex="2">
          <children>
@@ -85,5 +79,13 @@
          </children>
       </VBox>
       <Label id="headerErrorLabel" fx:id="errorLabel" prefHeight="66.0" prefWidth="410.0" text="Label" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2" />
+      <ComboBox fx:id="skinCBox" onAction="#skinCBoxClicked" prefHeight="25.0" prefWidth="125.0" promptText="Choose skin" styleClass="ComboBox">
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin></ComboBox>
+      <CheckBox fx:id="startAnimationCheckBox" mnemonicParsing="false" onAction="#startAnimationClicked" prefHeight="19.0" prefWidth="115.0" text="Start animation" GridPane.columnIndex="1" GridPane.columnSpan="2">
+         <GridPane.margin>
+            <Insets left="10.0" />
+         </GridPane.margin></CheckBox>
    </children>
 </GridPane>
