--- a/ui/src/newExecutionComponent/NewExecution.fxml
+++ b/ui/src/newExecutionComponent/NewExecution.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
@@ -22,6 +21,9 @@
                </children>
             </Pane>
          </children>
+         <BorderPane.margin>
+            <Insets left="5.0" />
+         </BorderPane.margin>
       </HBox>
    </center>
    <bottom>
