--- a/ui/src/newExecutionComponent/simulationEnvironmentsInputs/SimulationEnvironmentInputs.fxml
+++ b/ui/src/newExecutionComponent/simulationEnvironmentsInputs/SimulationEnvironmentInputs.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" styleClass="bodyPanes" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="newExecutionComponent.simulationEnvironmentsInputs.SimulationEnvironmentInputsController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="445.0" prefWidth="595.0" styleClass="bodyPanes" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="newExecutionComponent.simulationEnvironmentsInputs.SimulationEnvironmentInputsController">
    <top>
-      <Label id="simulationEnvironmentInputs" prefHeight="50.0" styleClass="topLabels" text="Simulation Environment Inputs" BorderPane.alignment="CENTER">
+      <Label id="simulationEnvironmentInputs" fx:id="titleLabel" prefHeight="50.0" styleClass="topLabels" text="Simulation Environment Inputs" BorderPane.alignment="CENTER">
          <padding>
             <Insets top="10.0" />
          </padding>
