--- a/ui/src/pageComponent/style/defaultPage.css
+++ b/ui/src/pageComponent/style/defaultPage.css
@@ -1,4 +1,19 @@
 .bodyPanes {
+    -fx-background-color: #f0f0f0; /* Updated background color */
+    -fx-border-color: #cccccc; /* Border color */
+    -fx-border-width: 1px; /* Border width */
+    -fx-border-radius: 5px; /* Rounded corners for the BorderPane */
+}
+
+.splitPane{
+    -fx-background-color: #f0f0f0; /* Updated background color */
+    -fx-border-color: #cccccc; /* Border color */
+    -fx-border-width: 1px; /* Border width */
+    -fx-border-radius: 5px; /* Rounded corners for the BorderPane */
+}
+
+.firstPage{
+    -fx-background-color: #f0f0f0; /* Updated background color */
     -fx-border-color: #cccccc; /* Border color */
     -fx-border-width: 1px; /* Border width */
     -fx-border-radius: 5px; /* Rounded corners for the BorderPane */
@@ -24,7 +39,7 @@
     -fx-pref-width: 180px; /* Preferred width for ComboBoxes */
     -fx-prompt-text-fill: #999999; /* Prompt text color */
     -fx-background-color: white; /* Background color */
-    -fx-border-color: #dcdcdc; /* Border color */
+    -fx-border-color: #999999; /* Border color */
     -fx-border-width: 1px; /* Border width */
     -fx-border-radius: 5px; /* Rounded corners for ComboBoxes */
     -fx-padding: 5px; /* Add padding to ComboBoxes */
@@ -120,7 +135,7 @@ LineChart {
 .newExecutionInputs{
     -fx-spacing: 10px;
     -fx-alignment: TOP_CENTER;
-    -fx-background-color: #ffffff; /* White background color */
+    -fx-background-color: #f0f0f0; /* White background color */
     -fx-padding: 10px; /* Add padding around the VBox */
 }
 
