--- a/ui/src/resultsComponent/executionResults/ExecutionResults.fxml
+++ b/ui/src/resultsComponent/executionResults/ExecutionResults.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
-<?import java.net.URL?>
 <?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ComboBox?>
@@ -10,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox id="executionResultsHBox" alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="resultsComponent.executionResults.ExecutionResultsController">
+<HBox id="executionResultsHBox" alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="295.0" prefWidth="795.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="resultsComponent.executionResults.ExecutionResultsController">
    <children>
       <VBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" spacing="10.0">
          <children>
@@ -18,6 +17,9 @@
                <children>
                   <Label id="simulationIdAndTimeDetails" fx:id="simulationDetails" layoutX="14.0" layoutY="-1.0" text="Label" />
                </children>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin>
             </Pane>
             <ComboBox fx:id="analyseTypeCBox" layoutX="20.0" layoutY="55.0" onAction="#analyseTypeCBoxClick" prefWidth="150.0" promptText="Choose analyse type" styleClass="ComboBox">
                <items>
@@ -27,7 +29,7 @@
                   </FXCollections>
                </items>
                <VBox.margin>
-                  <Insets left="10.0" />
+                  <Insets left="10.0" top="15.0" />
                </VBox.margin>
             </ComboBox>
             <ComboBox fx:id="entityCBox" onAction="#entityCBoxClick" prefWidth="150.0" promptText="Choose entity" styleClass="ComboBox">
